# nanopascal

./: CMakeLists.txt  MicroPascal.pro  README.md  bootstrap.bat
common/: opcodes.h
doc/: grammar.md
passembler/: fixuptbl.c  fixuptbl.h  keywords.c  keywords.h  lex.c  lex.h  main.c  parse.c  parse.h  symtbl.c  symtbl.h  test.p
pdisasm/: main.c
src/: ast.cpp  ast.h  lexer.c  lexer.h  main.c  main.cpp  parser.c  parser.cpp  parser.h  pcodegenerator.cpp  pcodegenerator.h  ptypes.h  reader.cpp  reader.h  symboltable.h  symtbl.c  symtbl.h  tokenizer.cpp  tokenizer.h  typestack.c  typestack.h  vmtypes.cpp  vmtypes.h
tests/: arraytest.pl0  fortest.pl0  iftest.pas  int2bin.pl0  lextest.pl0  mathtest.pas  primes1000.pl0  primes4096.pl0  proctest.pas  recursion.pl0  simple0.pl0  simple1.pl0  simple2.pl0  simple3.pl0  simple4.pl0  tokentest.pas  typerror1.pl0  writetest.pas
tests/passembler/: test1.p
virtualmachine/: main.c  virtualmachine.pro  vm.c  vm.h
vmdbgui/: CMakeLists.txt
vmdbgui/src/: common.h  instrmodel.cpp  instrmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  regmodel.cpp  regmodel.h  stackmodel.cpp  stackmodel.h  vmwrapper.cpp  vmwrapper.h
